tests/baselines/reference/parserForInStatement1.d.errors.txt
==== tests/cases/compiler/parserForInStatement1.d.ts (2 errors) ====
    for (var i in e) {
    ~~~
!!! parserForInStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
                  ~
!!! parserForInStatement1.d.ts(1,15): error TS2095: Cannot find name 'e'.
    }